Revision history for Perl extension BZ::Client.

2.0_5 Friday Sep 25 01:11:00 2015
    - Bug.pm: minor changes
    - Bugzilla.pm: add last_audit_time()
    - Bugzilla.pm: add parameters()
    - Bugzilla.pm: adjust version()
    - Bugzilla.pm: overhaul extensions()
    - Bugzilla.pm: adjust time()

2.0_4 Thursday Sep 24 01:35:00 2015
    - Attachment.pm: update() method and pod
    - Comment.pm: lots of pod and render() function

2.0_3 Tuesday Sep 22 09:47:00 2015
    - Implement the api_key properly
    - Bug.pm: handle alias() better (i.e. properly)
    - Replace use+@ISA with 'use parent'
    - Bug.pm: added history() and possible_duplicates()
    - Initial commit of Bugs/Attachment.pm
    - Initial commit of Bugs/Comment.pm
    - API.pm: move new() in here to be reused
    - Use __PACKAGE__ all around the place

2.0_001 Thursday Sep 17 10:42:00 2015
    - let's make this thing sane....
    - lots and lots of pod improvements
    - wantarray sensitivity all around the place
    - Bug.pm: add fields() function
    - XMLRPC.pm: dispatch table used rather than by if/elsif/else
    - XMLRPC.pm: replace 'use constants' and make singleton-ish
    - XMLRPC.pm: 'use' rather than 'require'
    - XMLRPC.pm: use HTTP::Tiny instead of LWP
    - Client.pm: use HTTP::CookieJar instead of HTTP::Cookies
    - Client.pm: make logout() work better
    - Bug.pm: add update_see_also() and update_tags() functions

1.072 Wednesday Sep 09 23:44:00 2015
    - Add Users.pm
    - Pod in various places

1.071 Monday Sep 07 13:21:00 2015
    - Improve/fix logout() and login() functions
    - t/write-config.pl will help you write a config file to run tests against a real bugzilla server

1.07 Friday Sep 04 15:58:00 2015
    - BZ::Client::logger protects its input
    - Add pod for more methods in BZ/Client.pm
    - Add autologin option for RT91184
    - Add support for token based logins used in bz4.4.3+ (bugzilla 5.0 now works)
    - Expose control of the restrict_login option via new()