@@ -1,5 +1,9 @@
 Revision history for Perl extension BZ::Client.
 
+
+    - XMLRPC.pm: pass through options to HTTP::Tiny
+    - Client.pm: facilitate pass through options to HTTP::Tiny
+
 2.0_5 Friday Sep 25 01:11:00 2015
     - Bug.pm: minor changes
     - Bugzilla.pm: add last_audit_time()
